# medvqa_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  _install.sh  _run_train_eval.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup_env.sh
configs/: eval_stage1_corruption.yaml  extract_vqarad_stage1.yaml  train_stage1_corruption.yaml
fine_tuned/: README.md  __init__.py  __main__.py  eval_hallucination.py  extract_hallucination_features.py  train_hallucination.py
fine_tuned/configs/: eval_stage2_hallucination.yaml  extract_halt_medvqa.yaml  train_stage2_hallucination.yaml
fine_tuned/data/: __init__.py  cxr_vishal_loader.py  halt_medvqa_loader.py
fine_tuned/test/: blip_inference_eval.py
fine_tuned/tests/: test_halt_loader.py
medvqa_probe/: __init__.py  __main__.py  eval_classifier.py  extract_features.py  train_classifier.py
medvqa_probe/data/: __init__.py  corruptions.py  features_dataset.py  vqarad_loader.py
medvqa_probe/models/: __init__.py  base_vqa_model.py  mlp_classifier.py
medvqa_probe/utils/: __init__.py  config.py  logging.py  metrics.py
scripts/: sklearn_baseline.py
tests/: test_config.py  test_data.py  test_training.py
